--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <script>
         window.onload = function () {
           const ui = SwaggerUIBundle({
-            url: "./swaggerui.json",
+            url: "./apidoc.json",
             dom_id: "#swagger-ui",
             presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
           });
